# OffHeap

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  index.d.ts  index.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml
benches/: rust_bench.rs
benchmarks/: batch_bench.js  buffer_rss_child.js  buffer_rss_test.js  crossover_bench.js  gc_pressure_bench.js  gc_pressure_child.js  hit_ratio_bench.js  js_bench.js  zipf_bench.js
docs/: index.md
docs/.vitepress/: config.js
docs/guide/: api.md  architecture.md  benchmarks.md  changelog.md  getting-started.md  semver.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: postinstall.js
src/: cache.rs  lib.rs  manager.rs
src/algorithms/: arc.rs  lru.rs  mod.rs  tinylfu.rs
tests/: index.test.js
