[package]
name = "offheap"
version = "0.3.12"
edition = "2021"
authors = ["Ryan Gustavo"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.16.8", features = ["serde-json"] }
napi-derive = "2.16.9"
parking_lot = "0.12.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
seahash = "4.1.0"
rand = "0.8.5"
mimalloc = { version = "0.1.43", features = ["local_dynamic_tls"] }
lz4_flex = "0.11.3"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
overflow-checks = true

[[bench]]
name = "rust_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
